Adding level design to street map

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -127,16 +127,16 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport1",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettings=(ViewportType=LVT_OrthoXZ,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=1,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=1,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 CurrentPosGridSize=0
-CurrentScalingGridSize=4
+CurrentScalingGridSize=6
 GridEnabled=False
 
 [MRU]
 MRUItem0=/Game/Maps/Street
-MRUItem1=/Game/Maps/Menu
-MRUItem2=/Game/Maps/School
-MRUItem3=/Game/Maps/Hospital
-MRUItem4=/Game/Maps/Park
-MRUItem5=/Game/Maps/Alley
+MRUItem1=/Game/Maps/School
+MRUItem2=/Game/Maps/Alley
+MRUItem3=/Game/Maps/Park
+MRUItem4=/Game/Maps/Menu
+MRUItem5=/Game/Maps/Hospital
 MRUItem6=/Game/Maps/LevelSelection
 MRUItem7=/Game/Maps/TrashPlace
 MRUItem8=/Game/ThirdPersonBP/Menu
@@ -211,31 +211,29 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/Maps/Street
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Maps/Street.Street:PersistentLevel.Street
-OpenAssetsAtExit=/Game/Blueprints/Street/BP_Car1.BP_Car1
+CleanShutdown=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Street/BP_Car1
-MRUItem1=/Game/Blueprints/Street/WB_FadeBlack
-MRUItem2=/Game/Blueprints/Collectibles/BP_Object1
-MRUItem3=/Game/Blueprints/Raccoon
-MRUItem4=/Game/Blueprints/Street/Car1
-MRUItem5=/Game/Maps/Street
-MRUItem6=/Game/Maps/Menu
-MRUItem7=/Game/Assets/3D/City/street_kinda_Cube_051
-MRUItem8=/Game/Maps/School
-MRUItem9=/Game/Assets/3D/City/street_kinda_Cube_035
-MRUItem10=/Game/Assets/3D/City/street_kinda_Cube_055
-MRUItem11=/Game/Assets/3D/City/street_kinda_Cube_052
-MRUItem12=/Game/Assets/3D/City/street_kinda_Cube_054
-MRUItem13=/Game/Maps/Hospital
-MRUItem14=/Game/Assets/3D/City/Sidewalk/Material_033
-MRUItem15=/Game/Assets/3D/City/Sidewalk/side_walk_thingy
-MRUItem16=/Game/Maps/Park
-MRUItem17=/Game/Assets/3D/City/lambert5
-MRUItem18=/Game/Assets/3D/City/House_Materials/Third/Material_001
-MRUItem19=/Game/Assets/3D/City/House_Materials/Third/Material_003
+MRUItem0=/Game/Assets/3D/Street/CoffeShop/Material_27
+MRUItem1=/Game/Assets/3D/Street/CoffeShop/Material_26
+MRUItem2=/Game/Maps/Street
+MRUItem3=/Game/Maps/School
+MRUItem4=/Game/Maps/Alley
+MRUItem5=/Game/Maps/Park
+MRUItem6=/Game/Blueprints/Street/BP_Car1
+MRUItem7=/Game/Blueprints/Street/WB_FadeBlack
+MRUItem8=/Game/Blueprints/Collectibles/BP_Object1
+MRUItem9=/Game/Blueprints/Raccoon
+MRUItem10=/Game/Blueprints/Street/Car1
+MRUItem11=/Game/Maps/Menu
+MRUItem12=/Game/Assets/3D/City/street_kinda_Cube_051
+MRUItem13=/Game/Assets/3D/City/street_kinda_Cube_035
+MRUItem14=/Game/Assets/3D/City/street_kinda_Cube_055
+MRUItem15=/Game/Assets/3D/City/street_kinda_Cube_052
+MRUItem16=/Game/Assets/3D/City/street_kinda_Cube_054
+MRUItem17=/Game/Maps/Hospital
+MRUItem18=/Game/Assets/3D/City/Sidewalk/Material_033
+MRUItem19=/Game/Assets/3D/City/Sidewalk/side_walk_thingy
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1495,6 +1493,11 @@ Car1_C=
 BoxComponent="\"Object.Tags.ComponentTags\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/Assets/3D/Street/CoffeShop/Material_025.Material_025;
+RecentlyPlaced=/Game/Assets/3D/Street/CoffeShop/coffee_house_Coffe_House.coffee_house_Coffe_House;
+RecentlyPlaced=/Game/Assets/3D/Park/uploads_files_3531329_street+asset_StreetDetails_08_003.uploads_files_3531329_street+asset_StreetDetails_08_003;
+RecentlyPlaced=/Game/Assets/3D/Park/uploads_files_3531329_street+asset_StreetFurniture_08_002.uploads_files_3531329_street+asset_StreetFurniture_08_002;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/Blueprints/Street/Car1.Car1;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3_3.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3_3;
@@ -1510,14 +1513,9 @@ RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car_
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_1.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_1;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_3_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_3_2;
-RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_2_3.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_2_3;
-RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_2_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_2_2;
-RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_1_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_1_2;
-RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_21.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_21;
-RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_20.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_20;
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/BP_Menu.BP_Menu=0
@@ -1589,6 +1587,8 @@ LastLogListing=PIE
 /Game/Blueprints/Street/Car1.Car1=0
 /Game/Maps/Street.Street:PersistentLevel.Street=0
 /Game/Blueprints/Street/WB_FadeBlack.WB_FadeBlack=1
+/Game/Assets/3D/Street/CoffeShop/Material_26.Material_26=1
+/Game/Assets/3D/Street/CoffeShop/Material_27.Material_27=1
 
 [RootWindow]
 ScreenPosition=X=136.000 Y=36.800
@@ -2686,7 +2686,7 @@ bHideUnrelatedNodes=False
 
 [DetailCustomWidgetExpansion]
 SkeletalMeshActor=SkeletalMeshActor.Physics.ConstraintsGroup,
-SceneComponent=
+SceneComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 CameraActor=SkeletalMeshActor.Physics.ConstraintsGroup,
 Actor=SkeletalMeshActor.Physics.ConstraintsGroup,
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings.NewActionMapping_3,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_4,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.ActionMappings.Run,
@@ -2763,7 +2763,7 @@ Raccoon_C=
 PlayerStart=SkeletalMeshActor.Physics.ConstraintsGroup,
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
 BP_Sky_Sphere_C=SkeletalMeshActor.Physics.ConstraintsGroup,
-PrimitiveComponent=
+PrimitiveComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 BrushComponent=
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 Brush=SkeletalMeshActor.Physics.ConstraintsGroup,
