Empty Update to save

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -131,14 +131,14 @@ CurrentScalingGridSize=6
 GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/Maps/Street
-MRUItem1=/Game/Maps/School
-MRUItem2=/Game/Maps/Alley
-MRUItem3=/Game/Maps/Park
-MRUItem4=/Game/Maps/Menu
-MRUItem5=/Game/Maps/Hospital
-MRUItem6=/Game/Maps/LevelSelection
-MRUItem7=/Game/Maps/TrashPlace
+MRUItem0=/Game/Maps/School
+MRUItem1=/Game/Maps/LevelSelection
+MRUItem2=/Game/Maps/TrashPlace
+MRUItem3=/Game/Maps/Hospital
+MRUItem4=/Game/Maps/Street
+MRUItem5=/Game/Maps/Alley
+MRUItem6=/Game/Maps/Park
+MRUItem7=/Game/Maps/Menu
 MRUItem8=/Game/ThirdPersonBP/Menu
 MRUItem9=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
@@ -178,7 +178,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Maps
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -208,32 +208,32 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Maps/Street
+LastLevel=/Game/Maps/School
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/3D/Street/CoffeShop/Material_27
-MRUItem1=/Game/Assets/3D/Street/CoffeShop/Material_26
-MRUItem2=/Game/Maps/Street
-MRUItem3=/Game/Maps/School
-MRUItem4=/Game/Maps/Alley
-MRUItem5=/Game/Maps/Park
-MRUItem6=/Game/Blueprints/Street/BP_Car1
-MRUItem7=/Game/Blueprints/Street/WB_FadeBlack
-MRUItem8=/Game/Blueprints/Collectibles/BP_Object1
-MRUItem9=/Game/Blueprints/Raccoon
-MRUItem10=/Game/Blueprints/Street/Car1
-MRUItem11=/Game/Maps/Menu
-MRUItem12=/Game/Assets/3D/City/street_kinda_Cube_051
-MRUItem13=/Game/Assets/3D/City/street_kinda_Cube_035
-MRUItem14=/Game/Assets/3D/City/street_kinda_Cube_055
-MRUItem15=/Game/Assets/3D/City/street_kinda_Cube_052
-MRUItem16=/Game/Assets/3D/City/street_kinda_Cube_054
-MRUItem17=/Game/Maps/Hospital
-MRUItem18=/Game/Assets/3D/City/Sidewalk/Material_033
-MRUItem19=/Game/Assets/3D/City/Sidewalk/side_walk_thingy
+MRUItem0=/Game/Maps/School
+MRUItem1=/Game/Maps/LevelSelection
+MRUItem2=/Game/Maps/TrashPlace
+MRUItem3=/Game/Maps/Hospital
+MRUItem4=/Game/Maps/Street
+MRUItem5=/Game/Maps/Alley
+MRUItem6=/Game/Maps/Park
+MRUItem7=/Game/Maps/Menu
+MRUItem8=/Game/Assets/3D/Street/CoffeShop/Material_27
+MRUItem9=/Game/Assets/3D/Street/CoffeShop/Material_26
+MRUItem10=/Game/Blueprints/Street/BP_Car1
+MRUItem11=/Game/Blueprints/Street/WB_FadeBlack
+MRUItem12=/Game/Blueprints/Collectibles/BP_Object1
+MRUItem13=/Game/Blueprints/Raccoon
+MRUItem14=/Game/Blueprints/Street/Car1
+MRUItem15=/Game/Assets/3D/City/street_kinda_Cube_051
+MRUItem16=/Game/Assets/3D/City/street_kinda_Cube_035
+MRUItem17=/Game/Assets/3D/City/street_kinda_Cube_055
+MRUItem18=/Game/Assets/3D/City/street_kinda_Cube_052
+MRUItem19=/Game/Assets/3D/City/street_kinda_Cube_054
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1515,7 +1515,7 @@ RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car_
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_3_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_3_2;
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/BP_Menu.BP_Menu=0
@@ -1592,7 +1592,7 @@ LastLogListing=FBXImport
 
 [RootWindow]
 ScreenPosition=X=136.000 Y=36.800
-WindowSize=X=1338.400 Y=778.400
+WindowSize=X=1340.000 Y=780.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1613,7 +1613,7 @@ UNR=../../../../../Unreal/PuzzleRaccoon/Raccoozle/Content/Maps
 BRUSH=../../../../../Unreal/Raccoozle/Content/
 FBX=../../../../../Unreal/Raccoozle/Content/
 FBXAnim=../../../../../Unreal/Raccoozle/Content/
-GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Street/car fixed.fbx
+GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Street/coffee house.fbx
 GenericExport=../../../../../Unreal/Raccoozle/Content/
 GenericOpen=D:/Unreal/PuzzleRaccoon/Photoshop
 GenericSave=../../../../../Unreal/Raccoozle/Content/
