--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,13 +129,14 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=0
 CurrentScalingGridSize=6
 GridEnabled=False
+CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Maps/School
-MRUItem1=/Game/Maps/LevelSelection
-MRUItem2=/Game/Maps/TrashPlace
-MRUItem3=/Game/Maps/Hospital
-MRUItem4=/Game/Maps/Street
+MRUItem0=/Game/Maps/Hospital
+MRUItem1=/Game/Maps/Street
+MRUItem2=/Game/Maps/School
+MRUItem3=/Game/Maps/LevelSelection
+MRUItem4=/Game/Maps/TrashPlace
 MRUItem5=/Game/Maps/Alley
 MRUItem6=/Game/Maps/Park
 MRUItem7=/Game/Maps/Menu
@@ -208,17 +209,17 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Maps/School
+LastLevel=/Game/Maps/Hospital
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/School
-MRUItem1=/Game/Maps/LevelSelection
-MRUItem2=/Game/Maps/TrashPlace
-MRUItem3=/Game/Maps/Hospital
-MRUItem4=/Game/Maps/Street
+MRUItem0=/Game/Maps/Hospital
+MRUItem1=/Game/Maps/Street
+MRUItem2=/Game/Maps/School
+MRUItem3=/Game/Maps/LevelSelection
+MRUItem4=/Game/Maps/TrashPlace
 MRUItem5=/Game/Maps/Alley
 MRUItem6=/Game/Maps/Park
 MRUItem7=/Game/Maps/Menu
@@ -1342,6 +1343,12 @@ BP_Car1_C.Rendering=True
 BP_Car1_C.Actor=True
 BP_Car1_C.Collision=True
 BP_Car1_C.Input=True
+Landscape.Surface Materials=True
+Landscape.Geometry=True
+Landscape.Surface Properties=True
+StaticMeshActor.Surface Materials=True
+StaticMeshActor.Geometry=True
+StaticMeshActor.Surface Properties=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1493,6 +1500,7 @@ Car1_C=
 BoxComponent="\"Object.Tags.ComponentTags\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Assets/3D/Street/CoffeShop/Material_025.Material_025;
 RecentlyPlaced=/Game/Assets/3D/Street/CoffeShop/coffee_house_Coffe_House.coffee_house_Coffe_House;
@@ -1512,7 +1520,6 @@ RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car_
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_2;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_1.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_1;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder;
-RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_3_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_3_2;
 
 [MessageLog]
 LastLogListing=PIE
@@ -1592,7 +1599,7 @@ LastLogListing=PIE
 
 [RootWindow]
 ScreenPosition=X=136.000 Y=36.800
-WindowSize=X=1340.000 Y=780.000
+WindowSize=X=1341.600 Y=781.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2686,7 +2693,7 @@ bHideUnrelatedNodes=False
 
 [DetailCustomWidgetExpansion]
 SkeletalMeshActor=SkeletalMeshActor.Physics.ConstraintsGroup,
-SceneComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
+SceneComponent=
 CameraActor=SkeletalMeshActor.Physics.ConstraintsGroup,
 Actor=SkeletalMeshActor.Physics.ConstraintsGroup,
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings.NewActionMapping_3,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_4,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.ActionMappings.Run,
@@ -2775,7 +2782,7 @@ MovieSceneBindingOverrides=
 DefaultLevelSequenceInstanceData=
 MeshComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
-LandscapeGizmoRenderComponent=
+LandscapeGizmoRenderComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 LandscapeComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 LandscapeGizmoActiveActor=SkeletalMeshActor.Physics.ConstraintsGroup,
 BP_CheckToAdvance_C=SkeletalMeshActor.Physics.ConstraintsGroup,
