--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -133,13 +133,13 @@ CurrentRotGridSize=0
 
 [MRU]
 MRUItem0=/Game/Maps/Hospital
-MRUItem1=/Game/Maps/Street
-MRUItem2=/Game/Maps/School
-MRUItem3=/Game/Maps/LevelSelection
-MRUItem4=/Game/Maps/TrashPlace
-MRUItem5=/Game/Maps/Alley
-MRUItem6=/Game/Maps/Park
-MRUItem7=/Game/Maps/Menu
+MRUItem1=/Game/Maps/Menu
+MRUItem2=/Game/Maps/Street
+MRUItem3=/Game/Maps/School
+MRUItem4=/Game/Maps/LevelSelection
+MRUItem5=/Game/Maps/TrashPlace
+MRUItem6=/Game/Maps/Alley
+MRUItem7=/Game/Maps/Park
 MRUItem8=/Game/ThirdPersonBP/Menu
 MRUItem9=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
@@ -216,25 +216,25 @@ CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Maps/Hospital
-MRUItem1=/Game/Maps/Street
-MRUItem2=/Game/Maps/School
-MRUItem3=/Game/Maps/LevelSelection
-MRUItem4=/Game/Maps/TrashPlace
-MRUItem5=/Game/Maps/Alley
-MRUItem6=/Game/Maps/Park
-MRUItem7=/Game/Maps/Menu
-MRUItem8=/Game/Assets/3D/Street/CoffeShop/Material_27
-MRUItem9=/Game/Assets/3D/Street/CoffeShop/Material_26
-MRUItem10=/Game/Blueprints/Street/BP_Car1
-MRUItem11=/Game/Blueprints/Street/WB_FadeBlack
-MRUItem12=/Game/Blueprints/Collectibles/BP_Object1
-MRUItem13=/Game/Blueprints/Raccoon
-MRUItem14=/Game/Blueprints/Street/Car1
-MRUItem15=/Game/Assets/3D/City/street_kinda_Cube_051
-MRUItem16=/Game/Assets/3D/City/street_kinda_Cube_035
-MRUItem17=/Game/Assets/3D/City/street_kinda_Cube_055
-MRUItem18=/Game/Assets/3D/City/street_kinda_Cube_052
-MRUItem19=/Game/Assets/3D/City/street_kinda_Cube_054
+MRUItem1=/Game/Assets/3D/Hospital/hospital
+MRUItem2=/Game/Maps/Street
+MRUItem3=/Game/Maps/School
+MRUItem4=/Game/Maps/LevelSelection
+MRUItem5=/Game/Maps/TrashPlace
+MRUItem6=/Game/Maps/Alley
+MRUItem7=/Game/Maps/Park
+MRUItem8=/Game/Maps/Menu
+MRUItem9=/Game/Assets/3D/Street/CoffeShop/Material_27
+MRUItem10=/Game/Assets/3D/Street/CoffeShop/Material_26
+MRUItem11=/Game/Blueprints/Street/BP_Car1
+MRUItem12=/Game/Blueprints/Street/WB_FadeBlack
+MRUItem13=/Game/Blueprints/Collectibles/BP_Object1
+MRUItem14=/Game/Blueprints/Raccoon
+MRUItem15=/Game/Blueprints/Street/Car1
+MRUItem16=/Game/Assets/3D/City/street_kinda_Cube_051
+MRUItem17=/Game/Assets/3D/City/street_kinda_Cube_035
+MRUItem18=/Game/Assets/3D/City/street_kinda_Cube_055
+MRUItem19=/Game/Assets/3D/City/street_kinda_Cube_052
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1349,6 +1349,7 @@ Landscape.Surface Properties=True
 StaticMeshActor.Surface Materials=True
 StaticMeshActor.Geometry=True
 StaticMeshActor.Surface Properties=True
+GeomModifier_Clip.Settings=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1467,7 +1468,7 @@ VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" 
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 SpotLight=
-Light=
+Light="\"Object.Light.PointLightComponent.Object.Light.LightColor\" "
 Spacer="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 AtmosphericFog="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
@@ -1498,10 +1499,16 @@ CapsuleComponent=
 ShapeComponent=
 Car1_C=
 BoxComponent="\"Object.Tags.ComponentTags\" "
+PointLight="\"Object.Light.PointLightComponent.Object.Light.LightColor\" "
+GeomModifier_Clip="\"Object.Settings\" "
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/Assets/3D/Hospital/brown.brown;
+RecentlyPlaced=/Game/Assets/3D/Hospital/metalic.metalic;
+RecentlyPlaced=/Game/Assets/3D/Hospital/red.red;
+RecentlyPlaced=/Game/Assets/3D/Hospital/hospital.hospital;
 RecentlyPlaced=/Game/Assets/3D/Street/CoffeShop/Material_025.Material_025;
 RecentlyPlaced=/Game/Assets/3D/Street/CoffeShop/coffee_house_Coffe_House.coffee_house_Coffe_House;
 RecentlyPlaced=/Game/Assets/3D/Park/uploads_files_3531329_street+asset_StreetDetails_08_003.uploads_files_3531329_street+asset_StreetDetails_08_003;
@@ -1516,13 +1523,9 @@ RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car_
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_7.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_7;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_6.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_6;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_5.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_5;
-RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3;
-RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_2;
-RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_1.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_1;
-RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder;
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/BP_Menu.BP_Menu=0
@@ -1596,10 +1599,11 @@ LastLogListing=PIE
 /Game/Blueprints/Street/WB_FadeBlack.WB_FadeBlack=1
 /Game/Assets/3D/Street/CoffeShop/Material_26.Material_26=1
 /Game/Assets/3D/Street/CoffeShop/Material_27.Material_27=1
+/Game/Assets/3D/Hospital/hospital.hospital=1
 
 [RootWindow]
 ScreenPosition=X=136.000 Y=36.800
-WindowSize=X=1341.600 Y=781.600
+WindowSize=X=1343.200 Y=783.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1620,7 +1624,7 @@ UNR=../../../../../Unreal/PuzzleRaccoon/Raccoozle/Content/Maps
 BRUSH=../../../../../Unreal/Raccoozle/Content/
 FBX=../../../../../Unreal/Raccoozle/Content/
 FBXAnim=../../../../../Unreal/Raccoozle/Content/
-GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Street/coffee house.fbx
+GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Hospital/hospital.fbx
 GenericExport=../../../../../Unreal/Raccoozle/Content/
 GenericOpen=D:/Unreal/PuzzleRaccoon/Photoshop
 GenericSave=../../../../../Unreal/Raccoozle/Content/
@@ -2693,7 +2697,7 @@ bHideUnrelatedNodes=False
 
 [DetailCustomWidgetExpansion]
 SkeletalMeshActor=SkeletalMeshActor.Physics.ConstraintsGroup,
-SceneComponent=
+SceneComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 CameraActor=SkeletalMeshActor.Physics.ConstraintsGroup,
 Actor=SkeletalMeshActor.Physics.ConstraintsGroup,
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings.NewActionMapping_3,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_4,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.ActionMappings.Run,
@@ -2782,7 +2786,7 @@ MovieSceneBindingOverrides=
 DefaultLevelSequenceInstanceData=
 MeshComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
-LandscapeGizmoRenderComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
+LandscapeGizmoRenderComponent=
 LandscapeComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 LandscapeGizmoActiveActor=SkeletalMeshActor.Physics.ConstraintsGroup,
 BP_CheckToAdvance_C=SkeletalMeshActor.Physics.ConstraintsGroup,
@@ -2920,5 +2924,5 @@ IsInSpawnInCurrentLevelMode=False
 SingleInstantiationPlacementMode=0
 
 [SuppressableDialogs]
-ExtrudeCoordsWarning=False
+ExtrudeCoordsWarning=True
 
