--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -133,9 +133,9 @@ CurrentRotGridSize=0
 
 [MRU]
 MRUItem0=/Game/Maps/Hospital
-MRUItem1=/Game/Maps/Menu
-MRUItem2=/Game/Maps/Street
-MRUItem3=/Game/Maps/School
+MRUItem1=/Game/Maps/School
+MRUItem2=/Game/Maps/Menu
+MRUItem3=/Game/Maps/Street
 MRUItem4=/Game/Maps/LevelSelection
 MRUItem5=/Game/Maps/TrashPlace
 MRUItem6=/Game/Maps/Alley
@@ -216,9 +216,9 @@ CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Maps/Hospital
-MRUItem1=/Game/Assets/3D/Hospital/hospital
-MRUItem2=/Game/Maps/Street
-MRUItem3=/Game/Maps/School
+MRUItem1=/Game/Maps/School
+MRUItem2=/Game/Assets/3D/Hospital/hospital
+MRUItem3=/Game/Maps/Street
 MRUItem4=/Game/Maps/LevelSelection
 MRUItem5=/Game/Maps/TrashPlace
 MRUItem6=/Game/Maps/Alley
@@ -1350,6 +1350,14 @@ StaticMeshActor.Surface Materials=True
 StaticMeshActor.Geometry=True
 StaticMeshActor.Surface Properties=True
 GeomModifier_Clip.Settings=True
+BlockingVolume.TransformCommon=True
+BlockingVolume.Collision=True
+BlockingVolume.Navigation=True
+BlockingVolume.Tags=True
+BlockingVolume.Cooking=True
+BlockingVolume.Replication=True
+BlockingVolume.BrushSettings=True
+BlockingVolume.Actor=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1468,7 +1476,7 @@ VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" 
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 SpotLight=
-Light="\"Object.Light.PointLightComponent.Object.Light.LightColor\" "
+Light=
 Spacer="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 AtmosphericFog="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
@@ -1501,8 +1509,11 @@ Car1_C=
 BoxComponent="\"Object.Tags.ComponentTags\" "
 PointLight="\"Object.Light.PointLightComponent.Object.Light.LightColor\" "
 GeomModifier_Clip="\"Object.Settings\" "
+BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Assets/3D/Hospital/brown.brown;
@@ -1522,10 +1533,9 @@ RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car_
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_1_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_1_2;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_7.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_7;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_6.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_6;
-RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_5.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_5;
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LightingResults
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/BP_Menu.BP_Menu=0
@@ -1603,7 +1613,7 @@ LastLogListing=FBXImport
 
 [RootWindow]
 ScreenPosition=X=136.000 Y=36.800
-WindowSize=X=1343.200 Y=783.200
+WindowSize=X=1344.800 Y=784.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2697,7 +2707,7 @@ bHideUnrelatedNodes=False
 
 [DetailCustomWidgetExpansion]
 SkeletalMeshActor=SkeletalMeshActor.Physics.ConstraintsGroup,
-SceneComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
+SceneComponent=
 CameraActor=SkeletalMeshActor.Physics.ConstraintsGroup,
 Actor=SkeletalMeshActor.Physics.ConstraintsGroup,
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings.NewActionMapping_3,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_4,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.ActionMappings.Run,
@@ -2787,7 +2797,7 @@ DefaultLevelSequenceInstanceData=
 MeshComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 LandscapeGizmoRenderComponent=
-LandscapeComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
+LandscapeComponent=
 LandscapeGizmoActiveActor=SkeletalMeshActor.Physics.ConstraintsGroup,
 BP_CheckToAdvance_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 Car1_C=
@@ -2892,7 +2902,7 @@ Value=1.000000
 DisplayedStatsPageName=PrimitiveStats
 
 [LandscapeEdit]
-ToolStrength=0.124762
+ToolStrength=0.239048
 BrushRadius=325.739655
 BrushFalloff=0.164762
 AlphaBrushAutoRotate=True
