Adding bounds to all maps, adding trash place map

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,14 +132,14 @@ GridEnabled=False
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Maps/Hospital
-MRUItem1=/Game/Maps/School
-MRUItem2=/Game/Maps/Menu
-MRUItem3=/Game/Maps/Street
-MRUItem4=/Game/Maps/LevelSelection
-MRUItem5=/Game/Maps/TrashPlace
-MRUItem6=/Game/Maps/Alley
-MRUItem7=/Game/Maps/Park
+MRUItem0=/Game/Maps/TrashPlace
+MRUItem1=/Game/Maps/Park
+MRUItem2=/Game/Maps/Street
+MRUItem3=/Game/Maps/Hospital
+MRUItem4=/Game/Maps/School
+MRUItem5=/Game/Maps/Alley
+MRUItem6=/Game/Maps/Menu
+MRUItem7=/Game/Maps/LevelSelection
 MRUItem8=/Game/ThirdPersonBP/Menu
 MRUItem9=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
@@ -209,20 +209,20 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Maps/Hospital
+LastLevel=/Game/Maps/TrashPlace
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Hospital
-MRUItem1=/Game/Maps/School
-MRUItem2=/Game/Assets/3D/Hospital/hospital
-MRUItem3=/Game/Maps/Street
-MRUItem4=/Game/Maps/LevelSelection
-MRUItem5=/Game/Maps/TrashPlace
-MRUItem6=/Game/Maps/Alley
-MRUItem7=/Game/Maps/Park
+MRUItem0=/Game/Maps/TrashPlace
+MRUItem1=/Game/Maps/Park
+MRUItem2=/Game/Maps/Street
+MRUItem3=/Game/Maps/Hospital
+MRUItem4=/Game/Maps/School
+MRUItem5=/Game/Maps/Alley
+MRUItem6=/Game/Assets/3D/Hospital/hospital
+MRUItem7=/Game/Maps/LevelSelection
 MRUItem8=/Game/Maps/Menu
 MRUItem9=/Game/Assets/3D/Street/CoffeShop/Material_27
 MRUItem10=/Game/Assets/3D/Street/CoffeShop/Material_26
@@ -1358,6 +1358,29 @@ BlockingVolume.Cooking=True
 BlockingVolume.Replication=True
 BlockingVolume.BrushSettings=True
 BlockingVolume.Actor=True
+ExponentialHeightFog.TransformCommon=True
+ExponentialHeightFog.ExponentialHeightFogComponent=True
+ExponentialHeightFog.InscatteringTexture=True
+ExponentialHeightFog.DirectionalInscattering=True
+ExponentialHeightFog.VolumetricFog=True
+ExponentialHeightFog.Rendering=True
+ExponentialHeightFog.Tags=True
+ExponentialHeightFog.Activation=True
+ExponentialHeightFog.Cooking=True
+ExponentialHeightFog.Replication=True
+ExponentialHeightFog.Actor=True
+VolumetricCloud.TransformCommon=True
+VolumetricCloud.Layer=True
+VolumetricCloud.Planet=True
+VolumetricCloud.Cloud Material=True
+VolumetricCloud.Cloud Tracing=True
+VolumetricCloud.Rendering=True
+VolumetricCloud.Tags=True
+VolumetricCloud.Activation=True
+VolumetricCloud.Cooking=True
+VolumetricCloud.Replication=True
+VolumetricCloud.Actor=True
+BP_Object1_C.TransformCommon=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1513,6 +1536,8 @@ BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.VolumetricCloud;/Engine/Transient.ActorFactoryVolumetricCloud_0
+RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
@@ -1531,8 +1556,6 @@ RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car_
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_2_3.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_2_3;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_2_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_2_2;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_1_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_1_2;
-RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_7.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_7;
-RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_6.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_6;
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -1613,7 +1636,7 @@ LastLogListing=LightingResults
 
 [RootWindow]
 ScreenPosition=X=136.000 Y=36.800
-WindowSize=X=1344.800 Y=784.800
+WindowSize=X=1346.400 Y=786.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2785,7 +2808,7 @@ PlayerStart=SkeletalMeshActor.Physics.ConstraintsGroup,
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
 BP_Sky_Sphere_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 PrimitiveComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
-BrushComponent=
+BrushComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 Brush=SkeletalMeshActor.Physics.ConstraintsGroup,
 Landscape=SkeletalMeshActor.Physics.ConstraintsGroup,
@@ -2797,7 +2820,7 @@ DefaultLevelSequenceInstanceData=
 MeshComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 LandscapeGizmoRenderComponent=
-LandscapeComponent=
+LandscapeComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 LandscapeGizmoActiveActor=SkeletalMeshActor.Physics.ConstraintsGroup,
 BP_CheckToAdvance_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 Car1_C=
@@ -2809,8 +2832,9 @@ K2Node_VariableSet=SkeletalMeshActor.Physics.ConstraintsGroup,
 Animation_Raccoon_C=
 DragDropOperation=
 StaticMeshSocket=
-BP_Object1_C=
+BP_Object1_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 LevelStreaming=
+BlockingVolume=SkeletalMeshActor.Physics.ConstraintsGroup,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2902,8 +2926,8 @@ Value=1.000000
 DisplayedStatsPageName=PrimitiveStats
 
 [LandscapeEdit]
-ToolStrength=0.239048
-BrushRadius=325.739655
+ToolStrength=0.520953
+BrushRadius=1098.364624
 BrushFalloff=0.164762
 AlphaBrushAutoRotate=True
 WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
