--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -133,13 +133,13 @@ GridEnabled=False
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Maps/TrashPlace
-MRUItem1=/Game/Maps/Alley
-MRUItem2=/Game/Maps/Park
-MRUItem3=/Game/Maps/Street
-MRUItem4=/Game/Maps/Hospital
-MRUItem5=/Game/Maps/School
-MRUItem6=/Game/Maps/Menu
+MRUItem0=/Game/Maps/Alley
+MRUItem1=/Game/Maps/Park
+MRUItem2=/Game/Maps/TrashPlace
+MRUItem3=/Game/Maps/Menu
+MRUItem4=/Game/Maps/Street
+MRUItem5=/Game/Maps/Hospital
+MRUItem6=/Game/Maps/School
 MRUItem7=/Game/Maps/LevelSelection
 MRUItem8=/Game/ThirdPersonBP/Menu
 MRUItem9=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
@@ -180,7 +180,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Assets/3D/TrashPlace
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Collectibles
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -210,32 +210,35 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Maps/TrashPlace
+LastLevel=/Game/Maps/Alley
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley.BP_CheckToAdvance_Alley
+OpenAssetsAtExit=/Game/Blueprints/Collectibles/BP_Apple.BP_Apple
+OpenAssetsAtExit=/Game/Blueprints/BP_GameModeRaccoon.BP_GameModeRaccoon
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/3D/TrashPlace/Material_3
-MRUItem1=/Game/Assets/3D/TrashPlace/Material_002
-MRUItem2=/Game/Assets/3D/TrashPlace/edited_fbx_Plane_002
-MRUItem3=/Game/Assets/3D/TrashPlace/Material_000
-MRUItem4=/Game/Assets/3D/Park/Terrain
-MRUItem5=/Game/Assets/3D/TrashPlace/Dirt
-MRUItem6=/Game/Maps/TrashPlace
-MRUItem7=/Game/Maps/Alley
-MRUItem8=/Game/Maps/Park
-MRUItem9=/Game/Maps/Street
-MRUItem10=/Game/Maps/Hospital
-MRUItem11=/Game/Maps/School
-MRUItem12=/Game/Assets/3D/Hospital/hospital
-MRUItem13=/Game/Maps/LevelSelection
-MRUItem14=/Game/Maps/Menu
-MRUItem15=/Game/Assets/3D/Street/CoffeShop/Material_27
-MRUItem16=/Game/Assets/3D/Street/CoffeShop/Material_26
-MRUItem17=/Game/Blueprints/Street/BP_Car1
-MRUItem18=/Game/Blueprints/Street/WB_FadeBlack
-MRUItem19=/Game/Blueprints/Collectibles/BP_Object1
+MRUItem0=/Game/Blueprints/BP_GameModeRaccoon
+MRUItem1=/Game/Maps/Alley
+MRUItem2=/Game/Maps/Park
+MRUItem3=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley
+MRUItem4=/Game/Blueprints/Collectibles/BP_Soda_2
+MRUItem5=/Game/Assets/3D/Objects/Apple/Apple1
+MRUItem6=/Game/Blueprints/Collectibles/BP_CheckToAdvance
+MRUItem7=/Game/Assets/3D/Objects/Sewer_Head
+MRUItem8=/Game/Assets/3D/Objects/Soda/Material_001
+MRUItem9=/Game/Assets/3D/Objects/Soda/Material_002
+MRUItem10=/Game/Blueprints/Collectibles/BP_Object1
+MRUItem11=/Game/Assets/3D/Objects/Material_002
+MRUItem12=/Game/Assets/3D/Objects/Material_001
+MRUItem13=/Game/Assets/3D/Objects/Material
+MRUItem14=/Game/Assets/3D/Objects/Arrow/Arrow6
+MRUItem15=/Game/Assets/3D/Objects/Arrow/Arrow5Albedo
+MRUItem16=/Game/Maps/TrashPlace
+MRUItem17=/Game/Maps/Menu
+MRUItem18=/Game/Assets/3D/TrashPlace/Material_3
+MRUItem19=/Game/Assets/3D/TrashPlace/Material_002
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1391,6 +1394,36 @@ PostProcessVolume.PostProcessVolumeSettings=True
 PostProcessVolume.Replication=True
 PostProcessVolume.BrushSettings=True
 PostProcessVolume.Actor=True
+SequenceRecorderActorGroup.Recording Groups=True
+SequenceRecorderSettings.Sequence Recording=True
+SequenceRecorderSettings.Audio Recording=True
+MediaSequenceRecorderSettings.MediaPlayer Recording=True
+BP_Soda_C.TransformCommon=True
+BP_Soda_C.Replication=True
+BP_Soda_C.Rendering=True
+BP_Soda_C.Collision=True
+BP_Soda_C.Input=True
+BP_Soda_C.Actor=True
+BP_Soda_2_C.Tick=True
+BP_Soda_2_C.Replication=True
+BP_Soda_2_C.Rendering=True
+BP_Soda_2_C.Actor=True
+BP_Soda_2_C.Collision=True
+BP_Soda_2_C.Input=True
+BP_CheckToAdvance_Park_C.TransformCommon=True
+BP_CheckToAdvance_Park_C.Replication=True
+BP_CheckToAdvance_Park_C.Rendering=True
+BP_CheckToAdvance_Park_C.Collision=True
+BP_CheckToAdvance_Park_C.Input=True
+BP_CheckToAdvance_Park_C.Actor=True
+BP_CheckToAdvance_Alley_C.TransformCommon=True
+BP_CheckToAdvance_Alley_C.Replication=True
+BP_CheckToAdvance_Alley_C.Rendering=True
+BP_CheckToAdvance_Alley_C.Collision=True
+BP_CheckToAdvance_Alley_C.Input=True
+BP_CheckToAdvance_Alley_C.Actor=True
+BP_CheckToAdvance_Alley_C.Tick=True
+BP_Soda_2_C.TransformCommon=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1529,15 +1562,15 @@ LandscapeProxy="\"Object.Landscape.LandscapeMaterialsOverride\" "
 BoneProxy="\"Object.Reference Transform.ReferenceScale\" "
 InterpToMovementComponent="\"Object.Control.ControlPoints\" \"Object.Control.ControlPoints.ControlPoints[0]\" \"Object.Control.ControlPoints.ControlPoints[1]\" "
 MovementComponent="\"Object.Control.ControlPoints\" \"Object.Control.ControlPoints.ControlPoints[0]\" \"Object.Control.ControlPoints.ControlPoints[1]\" "
-ActorComponent=
+ActorComponent="\"Object.Tags.ComponentTags\" "
 StaticMeshComponent="\"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Tags.ComponentTags\" "
-PrimitiveComponent=
-SceneComponent=
+PrimitiveComponent="\"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object.Tags.ComponentTags\" "
 SkeletalMeshComponent="\"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Tags.ComponentTags\" "
 CapsuleComponent=
-ShapeComponent=
+ShapeComponent="\"Object.Tags.ComponentTags\" "
 Car1_C=
 BoxComponent="\"Object.Tags.ComponentTags\" "
 PointLight="\"Object.Light.PointLightComponent.Object.Light.LightColor\" "
@@ -1545,8 +1578,16 @@ GeomModifier_Clip="\"Object.Settings\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+BP_GameModeRaccoon_C=
+GameModeBase=
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Collectibles/BP_Soda_2.BP_Soda_2;
+RecentlyPlaced=/Game/Assets/3D/Objects/Apple/Apple.Apple;
+RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley.BP_CheckToAdvance_Alley;
+RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Park.BP_CheckToAdvance_Park;
+RecentlyPlaced=/Game/Assets/3D/Objects/SEWER_HATCH_model_1_.SEWER_HATCH_model_1_;
+RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Game/Assets/3D/TrashPlace/Material_002.Material_002;
 RecentlyPlaced=/Game/Assets/3D/TrashPlace/edited_fbx_Plane_002.edited_fbx_Plane_002;
 RecentlyPlaced=/Game/Assets/3D/TrashPlace/Material_3.Material_3;
@@ -1555,21 +1596,15 @@ RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerSt
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.VolumetricCloud;/Engine/Transient.ActorFactoryVolumetricCloud_0
 RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
-RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Game/Assets/3D/Hospital/brown.brown;
 RecentlyPlaced=/Game/Assets/3D/Hospital/metalic.metalic;
 RecentlyPlaced=/Game/Assets/3D/Hospital/red.red;
 RecentlyPlaced=/Game/Assets/3D/Hospital/hospital.hospital;
 RecentlyPlaced=/Game/Assets/3D/Street/CoffeShop/Material_025.Material_025;
 RecentlyPlaced=/Game/Assets/3D/Street/CoffeShop/coffee_house_Coffe_House.coffee_house_Coffe_House;
-RecentlyPlaced=/Game/Assets/3D/Park/uploads_files_3531329_street+asset_StreetDetails_08_003.uploads_files_3531329_street+asset_StreetDetails_08_003;
-RecentlyPlaced=/Game/Assets/3D/Park/uploads_files_3531329_street+asset_StreetFurniture_08_002.uploads_files_3531329_street+asset_StreetFurniture_08_002;
-RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
-RecentlyPlaced=/Game/Blueprints/Street/Car1.Car1;
-RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3_3.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3_3;
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=FBXImport
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/BP_Menu.BP_Menu=0
@@ -1649,10 +1684,19 @@ LastLogListing=LightingResults
 /Game/Assets/3D/TrashPlace/Material_002.Material_002=0
 /Game/Assets/3D/Park/Terrain.Terrain=0
 /Game/Assets/3D/TrashPlace/Materials/Dirt.Dirt=0
+/Game/Assets/3D/Objects/Arrow/Arrow5Albedo.Arrow5Albedo=1
+/Game/Assets/3D/Objects/Arrow/Arrow6.Arrow6=0
+/Game/Assets/3D/Objects/Soda/Material_001.Material_001=0
+/Game/Assets/3D/Objects/Soda/Material_002.Material_002=0
+/Game/Assets/3D/Objects/Sewer_Head.Sewer_Head=1
+/Game/Blueprints/Collectibles/BP_Soda.BP_Soda=0
+/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley.BP_CheckToAdvance_Alley=0
+/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Park.BP_CheckToAdvance_Park=0
+/Game/Assets/3D/Objects/Apple/Apple1.Apple1=0
 
 [RootWindow]
 ScreenPosition=X=136.000 Y=36.800
-WindowSize=X=1348.000 Y=788.000
+WindowSize=X=1351.200 Y=791.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1673,7 +1717,7 @@ UNR=../../../../../Unreal/PuzzleRaccoon/Raccoozle/Content/Maps
 BRUSH=../../../../../Unreal/Raccoozle/Content/
 FBX=../../../../../Unreal/Raccoozle/Content/
 FBXAnim=../../../../../Unreal/Raccoozle/Content/
-GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/TrashPlace/edited fbx.fbx
+GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Objects/Apple_FBX/Apple.FBX
 GenericExport=../../../../../Unreal/Raccoozle/Content/
 GenericOpen=D:/Unreal/PuzzleRaccoon/Photoshop
 GenericSave=../../../../../Unreal/Raccoozle/Content/
@@ -2824,7 +2868,7 @@ PlayerStart=SkeletalMeshActor.Physics.ConstraintsGroup,
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
 BP_Sky_Sphere_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 PrimitiveComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
-BrushComponent=
+BrushComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 Brush=SkeletalMeshActor.Physics.ConstraintsGroup,
 Landscape=SkeletalMeshActor.Physics.ConstraintsGroup,
@@ -2844,14 +2888,18 @@ K2Node_VariableGet=SkeletalMeshActor.Physics.ConstraintsGroup,PropertyWrapper.De
 UniformVector=
 InterpToMovementComponent=
 PropertyWrapper=SkeletalMeshActor.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,
-K2Node_VariableSet=SkeletalMeshActor.Physics.ConstraintsGroup,
+K2Node_VariableSet=SkeletalMeshActor.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,
 Animation_Raccoon_C=
 DragDropOperation=
 StaticMeshSocket=
 BP_Object1_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 LevelStreaming=
 BlockingVolume=SkeletalMeshActor.Physics.ConstraintsGroup,
-PostProcessVolume=SkeletalMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading|Global,
+PostProcessVolume=SkeletalMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading
+BP_GameModeRaccoon_C=
+BP_Soda_C=SkeletalMeshActor.Physics.ConstraintsGroup,
+BP_CheckToAdvance_Park_C=SkeletalMeshActor.Physics.ConstraintsGroup,
+BP_CheckToAdvance_Alley_C=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2874,6 +2922,7 @@ LevelSequenceEditorSettings=True
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
@@ -2942,8 +2991,8 @@ Value=1.000000
 DisplayedStatsPageName=PrimitiveStats
 
 [LandscapeEdit]
-ToolStrength=0.360953
-BrushRadius=325.739655
+ToolStrength=0.124763
+BrushRadius=127.764313
 BrushFalloff=0.164762
 AlphaBrushAutoRotate=True
 WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
