Adding all objects to the game

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -180,7 +180,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Collectibles
+ContentBrowserTab1.SelectedPaths=/Game/Assets/3D/Objects/Heart
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -213,30 +213,29 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/Maps/Street
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Street/BP_Car1.BP_Car1
+CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/Particles/Materials/M_smoke_subUV
-MRUItem1=/Game/StarterContent/Particles/P_Steam_Lit
-MRUItem2=/Game/Maps/Street
-MRUItem3=/Game/Blueprints/Street/BP_Car1
-MRUItem4=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley
-MRUItem5=/Game/Blueprints/Collectibles/BP_CoffePacket
-MRUItem6=/Game/Maps/TrashPlace
-MRUItem7=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Street
-MRUItem8=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_School
-MRUItem9=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Park
-MRUItem10=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Hospital
-MRUItem11=/Game/Maps/Hospital
-MRUItem12=/Game/Maps/School
-MRUItem13=/Game/Maps/Alley
-MRUItem14=/Game/Maps/Park
-MRUItem15=/Game/Blueprints/Collectibles/BP_DoctorHeartTool
-MRUItem16=/Game/Blueprints/Collectibles/BP_Book
-MRUItem17=/Game/Blueprints/BP_GameModeRaccoon
-MRUItem18=/Game/Blueprints/Collectibles/BP_Apple
-MRUItem19=/Game/Blueprints/Collectibles/BP_Soda_2
+MRUItem0=/Game/Assets/3D/Objects/CupCake/uploads_files_1985193_cupcake
+MRUItem1=/Game/StarterContent/Particles/P_Smoke
+MRUItem2=/Game/StarterContent/Particles/Materials/M_smoke_subUV
+MRUItem3=/Game/StarterContent/Particles/P_Steam_Lit
+MRUItem4=/Game/Maps/Street
+MRUItem5=/Game/Blueprints/Street/BP_Car1
+MRUItem6=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley
+MRUItem7=/Game/Blueprints/Collectibles/BP_CoffePacket
+MRUItem8=/Game/Maps/TrashPlace
+MRUItem9=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Street
+MRUItem10=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_School
+MRUItem11=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Park
+MRUItem12=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Hospital
+MRUItem13=/Game/Maps/Hospital
+MRUItem14=/Game/Maps/School
+MRUItem15=/Game/Maps/Alley
+MRUItem16=/Game/Maps/Park
+MRUItem17=/Game/Blueprints/Collectibles/BP_DoctorHeartTool
+MRUItem18=/Game/Blueprints/Collectibles/BP_Book
+MRUItem19=/Game/Blueprints/BP_GameModeRaccoon
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1723,6 +1722,10 @@ ParticleModuleSpawn="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale
 ParticleModuleSpawnBase="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
+RecentlyPlaced=/Game/StarterContent/Particles/P_Sparks.P_Sparks;
+RecentlyPlaced=/Game/StarterContent/Particles/P_Ambient_Dust.P_Ambient_Dust;
+RecentlyPlaced=/Game/StarterContent/Particles/P_Smoke.P_Smoke;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Steam_Lit.P_Steam_Lit;
 RecentlyPlaced=/Game/Assets/3D/Objects/Sewer_Head.Sewer_Head;
 RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Hospital.BP_CheckToAdvance_Hospital;
@@ -1739,10 +1742,6 @@ RecentlyPlaced=/Game/Assets/3D/TrashPlace/edited_fbx_Plane_002.edited_fbx_Plane_
 RecentlyPlaced=/Game/Assets/3D/TrashPlace/Material_3.Material_3;
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Script/Engine.VolumetricCloud;/Engine/Transient.ActorFactoryVolumetricCloud_0
-RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
-RecentlyPlaced=/Game/Assets/3D/Hospital/brown.brown;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -1843,10 +1842,13 @@ LastLogListing=FBXImport
 /Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Hospital.BP_CheckToAdvance_Hospital=0
 /Game/StarterContent/Particles/P_Steam_Lit.P_Steam_Lit=0
 /Game/StarterContent/Particles/Materials/M_smoke_subUV.M_smoke_subUV=0
+/Game/StarterContent/Particles/P_Smoke.P_Smoke=0
+/Game/Blueprints/Street/BP_Car1.BP_Car1=0
+/Game/Assets/3D/Objects/CupCake/uploads_files_1985193_cupcake.uploads_files_1985193_cupcake=1
 
 [RootWindow]
 ScreenPosition=X=136.000 Y=36.800
-WindowSize=X=1351.200 Y=791.200
+WindowSize=X=1352.800 Y=792.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
